task-queue/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: task-queue
spec : 
  ports :
  - port : 3000
    targetPort : 3000
    protocol : TCP
  selector :
    app : api 
  type : ClusterIP
